<resources>
    <string name="app_name">눈알</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register_tooltip">가입해서 즐거운\n눈알을\n체험해보세요</string>
    <string name="register">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_post">최신 작품</string>
    <string name="suggestion_search_word">추천 검색어</string>
    <string name="recently_search_word">최근 검색어</string>
    <string name="erase_all">모두 지우기</string>
    <string name="name">이름</string>
</resources>