<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.nunar.nun_ar_android_v1.view.SignupActivity" />

        <variable
            name="vm"
            type="com.nunar.nun_ar_android_v1.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".view.SignupActivity">

        <ImageButton
            android:id="@+id/signup_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:onClick="@{() -> activity.finish()}"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_arrow" />

        <EditText
            android:id="@+id/signup_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_login_text"
            android:hint="@string/id"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@={vm.id}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_backBtn" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_login_text"
            android:hint="@string/password"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@={vm.password}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_id" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_login_text"
            android:hint="@string/name"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@={vm.name}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password" />

        <LinearLayout
            android:id="@+id/profileUploadView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_image_upload"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/signup_submitbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_name">

            <ImageView
                android:id="@+id/profileUploadIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_upload_mini" />

            <TextView
                android:id="@+id/signup_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="프로필 이미지 업로드"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="19sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/profile_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/signup_submitbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_name">

            <ImageView
                android:id="@+id/profileThumbnailImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/profileDeleteImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_minus_btn" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_submitbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_login_button"
            android:fontFamily="sans-serif"
            android:text="회원가입"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>